--- a/hacktoberfest/index.html
+++ b/hacktoberfest/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords" content="2021, hacktoberfest,Bauddhik-Geeks">
+  <meta name="keywords" content="2021, hacktoberfest,Afri-coders">
   <meta name="description"
-    content="hactoberfest 2021 with Bauddhik-Geeks">
+    content="hactoberfest 2021 with Afri-coders">
   <meta name="author" content="Geeks.CAT">
   <title>Hacktoberfest 2021 | Bauddhik Geeks</title>
   <link rel="shortcut icon" href="images/backgrounds/transbg.png">
@@ -82,11 +82,11 @@
         Contribute to beginners friendly projects
         </p>
         <p>Hacktoberfest encourages participation in the open source community, which grows bigger every year. Complete the 2021 challenge and earn a limited edition T-shirt.</p>
-        <p>Join the <a style="color: #fbbd18" href="https://github.com/Bauddhik-Geeks">Bauddhik-Geeks</a> Github organization and contribute to the beginner friendly projects and complete the hactoberfest challenge.</p>
+        <p>Join the <a style="color: #fbbd18" href="https://github.com/Afri-coders">Afri-coders</a> Github organization and contribute to the beginner friendly projects and complete the hactoberfest challenge.</p>
     </div>
 
     <div class="bauddik-form-btn" id="bgh-frm-btn">
-      <button>Join Bauddhik-Geeks</button>
+      <button>Join Afri-coders</button>
     </div>
     <div class="bauddik-form" id="bgh-frm">
 	    <p style="color:yellow;">we will send invitation mail as you fill the form</p>
@@ -125,9 +125,9 @@
               <div class="card-body">
                 <p class="card-text">
                   We at <a target="_blank"
-                    href="https://github.com/Bauddhik-Geeks"><code>Bauddhik-Geeks</code></a> will help you to
+                    href="https://github.com/Afri-coders"><code>Afri-coders</code></a> will help you to
                   start your open source jouney, by helping you out contributing to projects in
-                  Bauddhik-Geeks Github
+                  Afri-coders Github
                   organization.
                 </p>
               </div>
@@ -142,11 +142,11 @@
                   We will be divided into teams depending on the area of ​​specialty to which we want to contribute.
                 </p>
                 <p class="card-text">
-                  The base will be <a target="_blank" href="https://github.com/Bauddhik-Geeks">Bauddhik-geeks
+                  The base will be <a target="_blank" href="https://github.com/Afri-coders">Afri-coders
                     repositories</a>.
                 </p>
                 <p class="card-text">
-                  We will use <a target="_blank" href="https://github.com/Bauddhik-Geeks">to
+                  We will use <a target="_blank" href="https://github.com/Afri-coders">to
                     manage</a> to manage, define and assign us the tasks to carry out. At the moment there are only the
                   lines we propose, each team will finish
                   modeling them according to what they consider.
@@ -188,7 +188,7 @@
                   </ul>
                   </li>
                   <li>
-                    We (Bauddhik-Geeks and the collaborators of the event) will provide the necessary infrastructure to be
+                    We (Afri-coders and the collaborators of the event) will provide the necessary infrastructure to be
                     able to publish the
                     project: servers / cluster, dns, domain, email, ...
                   </li>
@@ -552,17 +552,17 @@
         <h2 class="section-title" style="color:#fbbd18;">Contact Us</h2>
       </div>
       <div class="bg-social-outer">
-        <button onclick='(window.location.href="https://github.com/Bauddhik-Geeks")'><img src="../images/github.png" ></button>
+        <button onclick='(window.location.href="https://github.com/Afri-coders")'><img src="../images/github.png" ></button>
         <button onclick='(window.location.href="https://discord.gg/fJDQgQrPmG")'><img src="../images/discord.png"></button>
         <button onclick='(window.location.href="https://twitter.com/BauddhikGeeks")'><img src="../images/twiiter.png"></button>
-        <button onclick='(window.location.href="https://www.linkedin.com/company/bauddhik-geeks/mycompany/")'><img src="../images/linkedin.png"></button>
+        <button onclick='(window.location.href="https://www.linkedin.com/company/Afri-coders/mycompany/")'><img src="../images/linkedin.png"></button>
       </div>
       <div class="row text-center">
         <div class="col-lg-12 text-center">
 
           <div class="banner2 bannerCall2Action bauddhik-footer-border">
             <h5>
-              I want to be up to date with the latest news from Bauddhik-Geeks
+              I want to be up to date with the latest news from Afri-coders
             </h5>
 
             <!-- Begin Mailchimp Signup Form -->
@@ -595,8 +595,8 @@
     </div>
   </section>
   <div class="bauddhik-copy">
-    <p style="color: #fff;">copyright <a href="https://bauddhikgeeks.tech/"><b style="color: #fbbd18;">©Bauddhik-Geeks</b></a></p>
-    <p style="color: #fff; font-size: 12px;">Designed and Developed by <a href="https://kevalvavaliya.github.io/">Keval</a> and <a href="#bgtem">Bauddhik-Geeks team</a></p>
+    <p style="color: #fff;">copyright <a href="https://bauddhikgeeks.tech/"><b style="color: #fbbd18;">©Afri-coders</b></a></p>
+    <p style="color: #fff; font-size: 12px;">Designed and Developed by <a href="https://kevalvavaliya.github.io/">Keval</a> and <a href="#bgtem">Afri-coders team</a></p>
   </div>
 
   <!-- Bootstrap core JavaScript -->
