--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
     <!-- Website Title -->
-    <title>Bauddhik-Geeks</title>
+    <title>Afri-coders</title>
 
     <!-- Stylesheets Start -->
     <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3 logo bauddhik-logo">
-                        <a href="#" title="Bauddhik-Geeks">
+                        <a href="#" title="Afri-coders">
                             <img src="images/logo.gif" class="baudhhik-img" />
                         </a>
                         <a>
@@ -3049,18 +3049,18 @@
                     <div class="row align-items-center">
                         <div class="col-sm-12 col-md-6 hero-left">
                             <h1 class="center-name" style="font-weight: bold !important; color: #fbbd18 !important">
-                                Bauddhik-Geeks<br />
+                                Afri-coders<br />
                             </h1>
                             <div class="sologan">Hello Folks <img src="images/wave.png" class="hello-anim">! <br>We are a community of tech geeks. Come learn, share and connect with us.
                             </div>
                             <div class="hero-btns popup" style="margin-top: 18px; margin-left: -4px">
                                 <a href="https://join.bauddhikgeeks.tech/" target="_blank"><button class="main-sc-btn"><img
                       src="images/discord.png" /></button></a>
-                                <a href="https://github.com/Bauddhik-Geeks" target="_blank"><button class="main-sc-btn"><img
+                                <a href="https://github.com/Afri-coders" target="_blank"><button class="main-sc-btn"><img
                       src="images/github.png" /></button></a>
                                 <a href="https://twitter.com/BauddhikGeeks" target="_blank"><button class="main-sc-btn"><img
                       src="images/twiiter.png" /></button></a>
-                                <a href="https://www.linkedin.com/company/bauddhik-geeks/mycompany/" target="_blank"><button
+                                <a href="https://www.linkedin.com/company/Afri-coders/mycompany/" target="_blank"><button
                     class="main-sc-btn"><img src="images/linkedin.png" /></button></a>
                             </div>
                             <!--                             <div class="hactoberfest2021">
@@ -3097,7 +3097,7 @@
                                 </div>
                                 <div class="bf-details">
                                     <h3>Whom is it for?</h3>
-                                    <p>Bauddhik-Geeks is for EVERYONE who want to learn something and then want to share. The community believes in helping any individual and also using their skills to upgrade the community.</p>
+                                    <p>Afri-coders is for EVERYONE who want to learn something and then want to share. The community believes in helping any individual and also using their skills to upgrade the community.</p>
                                 </div>
                             </div>
 
@@ -5982,7 +5982,7 @@
                         <div class="roadmap-text">
                             <div class="roadmap-item-text">
                                 <p>
-                                    Bauddhik-Geeks Established
+                                    Afri-coders Established
                                 </p>
                             </div>
                             <div class="roadmap-day">
@@ -6119,7 +6119,7 @@
         <div class="container">
             <div class="partner-logo-row">
                 <div class="item prj-item">
-                    <a href="https://github.com/Bauddhik-Geeks/ATOM-The-Voice-Assistant">
+                    <a href="https://github.com/Afri-coders/ATOM-The-Voice-Assistant">
                         <img src="images/projects/voiceassi.png" style="max-width: 100%; max-height: 200px" alt="loclens">
                     </a>
                     <div class="prj-desc">
@@ -6129,7 +6129,7 @@
                     </div>
                 </div>
                 <div class="item prj-item">
-                    <a href="https://github.com/Bauddhik-Geeks/Portfolio-Builder">
+                    <a href="https://github.com/Afri-coders/Portfolio-Builder">
                         <img src="images/projects/protfoliobuild.png" style="max-width: 100%; max-height: 200px" alt="loclens">
                     </a>
                     <div class="prj-desc">
@@ -6139,7 +6139,7 @@
                     </div>
                 </div>
                 <div class="item prj-item">
-                    <a href="https://github.com/Bauddhik-Geeks/Localens">
+                    <a href="https://github.com/Afri-coders/Localens">
                         <img src="images/projects/loclens.jpg" style="max-width: 100%; max-height: 200px" alt="loclens">
                     </a>
                     <div class="prj-desc">
@@ -6149,7 +6149,7 @@
                     </div>
                 </div>
                 <div class="item prj-item">
-                    <a href="https://github.com/Bauddhik-Geeks/Garuda">
+                    <a href="https://github.com/Afri-coders/Garuda">
                         <img src="images/projects/garuda.jpeg" style="max-width: 100%; max-height: 200px" alt="garuda">
                     </a>
                     <div class="prj-desc">
@@ -6226,7 +6226,7 @@
                     <div class="footer-logo">
                         <a href="#top"><img src="images/logo.gif" alt="bauddhik-geek" height="50px" width="60px"></a>
                         <a href="#top" title="">
-                            <h2>Bauddhik-Geeks</h2>
+                            <h2>Afri-coders</h2>
                         </a>
                     </div>
                     <p style="font-size: 20px; font-weight: 400">We are a community of tech geeks. Come learn, share and connect with us.
@@ -6257,13 +6257,13 @@
                     <div class="socials" id="socials">
                         <ul>
                             <li>
-                                <a href="https://github.com/Bauddhik-Geeks"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/Afri-coders"><i class="fab fa-github"></i></a>
                             </li>
                             <li>
                                 <a href="https://join.bauddhikgeeks.tech/"><i class="fab fa-discord"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/company/bauddhik-geeks/mycompany/"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/company/Afri-coders/mycompany/"><i class="fab fa-linkedin"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/BauddhikGeeks"><i class="fab fa-twitter"></i></a>
@@ -6274,11 +6274,11 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="copyrights style-1">Copyright 2021 @Bauddhik-Geeks</div>
+                    <div class="copyrights style-1">Copyright 2021 @Afri-coders</div>
                     </br>
                     <div>
                         <p style="color: #fff;"> Developed by <a style="color: #fbbd18;" href="https://kevalvavaliya.github.io/">
-                Keval </a>and <a style="color: #fbbd18;" href="#">Bauddhik-Geeks team</a> </P>
+                Keval </a>and <a style="color: #fbbd18;" href="#">Afri-coders team</a> </P>
                     </div>
 
                 </div>
