--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </a>
                         <a>
                             <h2 class="logo-txt" style="color: #fff;">
-                                Bauddhik Geeks
+                                Afri-coders
                             </h2>
 
                         </a>
@@ -76,7 +76,7 @@
                                 <li><a href="#contributor">Contributors</a></li>
 
                                 <li class="nav-btn">
-                                    <a href="https://join.bauddhikgeeks.tech/" target="_blank"><img style="margin-right: 5px" src="images/discord.png" height="35px" width="40px" /></a>
+                                    <a href="https://join.afri-coders.com/" target="_blank"><img style="margin-right: 5px" src="images/discord.png" height="35px" width="40px" /></a>
                                 </li>
                             </ul>
                         </nav>
@@ -3051,14 +3051,14 @@
                             <h1 class="center-name" style="font-weight: bold !important; color: #fbbd18 !important">
                                 Afri-coders<br />
                             </h1>
-                            <div class="sologan">Hello Folks <img src="images/wave.png" class="hello-anim">! <br>We are a community of tech geeks. Come learn, share and connect with us.
+                            <div class="sologan">Hello Folks <img src="images/wave.png" class="hello-anim">! <br>We are a community of tech enthusiasts. Come learn, share and connect with us.
                             </div>
                             <div class="hero-btns popup" style="margin-top: 18px; margin-left: -4px">
-                                <a href="https://join.bauddhikgeeks.tech/" target="_blank"><button class="main-sc-btn"><img
+                                <a href="https://afri-coders.com/" target="_blank"><button class="main-sc-btn"><img
                       src="images/discord.png" /></button></a>
                                 <a href="https://github.com/Afri-coders" target="_blank"><button class="main-sc-btn"><img
                       src="images/github.png" /></button></a>
-                                <a href="https://twitter.com/BauddhikGeeks" target="_blank"><button class="main-sc-btn"><img
+                                <a href="https://twitter.com/afri-coders" target="_blank"><button class="main-sc-btn"><img
                       src="images/twiiter.png" /></button></a>
                                 <a href="https://www.linkedin.com/company/Afri-coders/mycompany/" target="_blank"><button
                     class="main-sc-btn"><img src="images/linkedin.png" /></button></a>
@@ -6260,13 +6260,13 @@
                                 <a href="https://github.com/Afri-coders"><i class="fab fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="https://join.bauddhikgeeks.tech/"><i class="fab fa-discord"></i></a>
+                                <a href="https://afri-coders.com/"><i class="fab fa-discord"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/Afri-coders/mycompany/"><i class="fab fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/BauddhikGeeks"><i class="fab fa-twitter"></i></a>
+                                <a href="https://twitter.com/afri-coders"><i class="fab fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
