removed some things

--- a/index.html
+++ b/index.html
@@ -5994,7 +5994,7 @@
                         <div class="roadmap-text">
                             <div class="roadmap-item-text">
                                 <p>
-                                    Bauddhik-Geek team <br /> was formed<br />
+                                    Afri-coders team <br /> was formed<br />
                                 </p>
                             </div>
                             <div class="roadmap-day">
@@ -6193,22 +6193,22 @@
     </div>
     <!-- The Partner end -->
     <!-- The Media start -->
-    <div class="blog-section p-tb" style="background: #f2f2f2" id="our-team">
+  <!--   <div class="blog-section p-tb" style="background: #f2f2f2" id="our-team">
         <div class="container">
             <div class="sec-title text-center" style="color: #fff">
                 <h3>Our Team</h3>
             </div>
         </div>
         <div class="contributors"></div>
-    </div>
-    <div class="blog-section p-tb" style="background: #f2f2f2" id="contributor">
+    </div> -->
+ <!--    <div class="blog-section p-tb" style="background: #f2f2f2" id="contributor">
         <div class="container">
             <div class="sec-title text-center" style="color: #fff">
                 <h3>Contributors</h3>
             </div>
         </div>
         <div class="contributors"></div>
-    </div>
+    </div> -->
     <!-- The Media end -->
     <div class="eeflux-quote">
 
@@ -6224,7 +6224,7 @@
             <div class="row">
                 <div class="col-md-4 footer-box-1">
                     <div class="footer-logo">
-                        <a href="#top"><img src="images/logo.gif" alt="bauddhik-geek" height="50px" width="60px"></a>
+                        <a href="#top"><img src="images/logo.gif" alt="Afri-coders" height="50px" width="60px"></a>
                         <a href="#top" title="">
                             <h2>Afri-coders</h2>
                         </a>
