enough is enoug lol

--- a/index.html
+++ b/index.html
@@ -6145,7 +6145,6 @@
                     <div class="prj-desc">
                         <h2>Localens</h2>
                         <p>An Android app to find local beauty</p>
-                        <!-- <span class="prj-author">-By <a href="https://github.com/kevalvavaliya">Keval</a>, <a href="https://github.com/abhigoyani">Abhi</a> and <a href="https://github.com/adityamangal1">Aditya</a></span> -->
                     </div>
                 </div>
                 <div class="item prj-item">
@@ -6277,8 +6276,8 @@
                     <div class="copyrights style-1">Copyright 2021 @Afri-coders</div>
                     </br>
                     <div>
-                        <p style="color: #fff;"> Developed by <a style="color: #fbbd18;" href="https://kevalvavaliya.github.io/">
-                Keval </a>and <a style="color: #fbbd18;" href="#">Afri-coders team</a> </P>
+                        <p style="color: #fff;"> Developed by <a style="color: #fbbd18;" href="https://github.com/Regicyber/">
+                Benevox </a>and <a style="color: #fbbd18;" href="#">Afri-coders team</a> </P>
                     </div>
 
                 </div>
